# sylas

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sylas.yml
agent/: constants.py  dependency_manager.py  main.py  remediator.py  scanners.py  trivy_integration.py  verifier.py
configs/: security_guardrails.json
dvpwa/: requirements.txt
sylas-clean/: .dockerignore  .gitignore  requirements.txt
sylas-clean/agent/: __init__.py  cli.py  git_integration.py  github_auth.py  github_security.py  logger.py  orchestrator.py  report.py  safety.py  scanner.py  semgrep_scanner.py  utils.py
sylas-clean/configs/: agent_config.yaml
tests/: test_file_resolution.py  test_llm.py  test_prompts.py  test_scanners.py  test_utils.py  test_verification.py
